)) |'ve added a fullscreen option via double-click anywhere on the page. )) Now the feather info icon is fading out after 3s, and it appears every time the user hovers it with the mouse. )) I've changed a little bit formatting of the code

--- a/style.css
+++ b/style.css
@@ -73,3 +73,15 @@ html {
 .modal-container a {
   color: #fff;
 }
+
+.feather-info {
+  opacity: 0;
+  transition: opacity .5s ease-out;
+  -moz-transition: opacity .5s ease-out;
+  -webkit-transition: opacity .5s ease-out;
+  -o-transition: opacity .5s ease-out;
+}
+
+.feather-info-hover, .feather-info:hover {
+  opacity: 1;
+}
